# mm_solver

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  sonar-project.properties
.circleci/: config.yml
docker/: Dockerfile
include/controller/: BacktrackingController.h  SolutionActions.h
include/controller/initializer/: Meeptropolis.h
include/model/: Board.h  Meeple.h  Move.h  MoveComputations.h  Solution.h  typedefs.h
include/view/ascii/: BoardPrinter.h
src/: main.cpp
src/controller/: BacktrackingController.cpp  SolutionActions.cpp
src/model/: Board.cpp  Move.cpp  MoveComputations.cpp
src/view/ascii/: BoardPrinter.cpp
test/: CMakeLists.txt
test/controller/: BacktrackingControllerTest.cpp  CMakeLists.txt
test/model/: BoardTest.cpp  CMakeLists.txt  MoveTest.cpp
test/view/: CMakeLists.txt
test/view/ascii/: BoardPrinterTest.cpp  CMakeLists.txt
